[package]
name = "cppman-rs"
version = "0.1.0"
authors = ["hcpl <hcpl.prog@gmail.com>"]

[dependencies]
either = "1.1.0"
rust-ini = "0.10.0"
regex = "0.2.1"
lazy_static = "0.2.8"
chrono = "0.3.0"
select = "0.4.0"
nom = "2.2.1"
rusqlite = "0.11.0"
isatty = "0.1.3"
flate2 = "0.2.19"
reqwest = "0.6.0"
url = "1.4.0"
ordermap = "0.2.10"
mime = "0.2.3"
clap = "~2.24.1"
term_size = "0.3.0"
error-chain = "0.10.0"
